@@ -28,6 +28,8 @@ import org.bukkit.event.Listener;
 
 import nl.knokko.customitems.plugin.CustomItemsPlugin;
 
+import java.lang.reflect.InvocationTargetException;
+
 public class CrazyEnchantmentsSupport {
 	
 	public static void onEnable() {
@@ -39,14 +41,15 @@ public class CrazyEnchantmentsSupport {
 			// Load support for this plugin
 			Bukkit.getPluginManager().registerEvents((Listener) Class.forName(
 					"nl.knokko.customitems.plugin.multisupport.crazyenchantments.CrazyEnchantmentsEventHandler"
-			).newInstance(), CustomItemsPlugin.getInstance());
-
+			).getDeclaredConstructor().newInstance(), CustomItemsPlugin.getInstance());
 		} catch (ClassNotFoundException ex) {
 			Bukkit.getLogger().info("Can't load class me.badbones69.crazyenchantments.api.enums.CEnchantments, so I assume Crazy Enchantments is not installed.");
 		} catch (InstantiationException e) {
 			throw new Error("It should be possible to instantiate CrazyEnchantmentsEventHandler", e);
 		} catch (IllegalAccessException e) {
 			throw new Error("CrazyEnchantmentsEventHandler should be accessible", e);
+		} catch (NoSuchMethodException | InvocationTargetException e) {
+			throw new Error("CrazyEnchantmentsEventHandler should have an empty constructor");
 		}
 	}
 }
